--- a/public/index.html
+++ b/public/index.html
@@ -2,17 +2,19 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+    <link rel="icon" href="%PUBLIC_URL%/favicon.svg" />
+    <link rel=”mask-icon” href="%PUBLIC_URL%/safari-mask-icon.svg"
+    color=”#3184FF">
     <meta
       name="viewport"
       content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=10.0, height=device-height, target-densitydpi=device-dpi"
     />
-    <meta name="theme-color" content="#000000" />
+    <meta name="theme-color" content="#3184FF" />
     <meta
       name="description"
       content="Suivre son temps de travail sur la route et en-dehors"
     />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
+    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo180.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
